Fixing incorrect row width calculation.
gridsystem-width() already calculates the width with the outer margin
included. Adding the gutter again makes the width of the row too large.

--- a/stylesheets/scss/grid.scss
+++ b/stylesheets/scss/grid.scss
@@ -51,9 +51,9 @@ body {
 
 @mixin row($c:$columns) {
 	display: block;
-	width: (($gutter-width + gridsystem-width($c)) * gridsystem-ratio());
+	width: (gridsystem-width($c) * gridsystem-ratio());
 	margin: 0 (-.5 * $gutter-width * gridsystem-ratio());
-	// *width: (($gutter-width + gridsystem-width($c))*gridsystem-ratio())-$correction;
+	// *width: (gridsystem-width($c) * gridsystem-ratio())-$correction;
 	// *margin: 0 (-.5 * $gutter-width * gridsystem-ratio())-$correction;
 	@include clearfix();
 }
